# trading_strategies

./: README.md  apply_strategy.py  fetch_symbol.py  main.py  pyproject.toml  settings.py
data/: AAPL_20150101_20240701_raw.csv  AAPL_20150101_20240701_strategy.csv
utils/: data_loader.py
utils/strategies/: mean_reversion.py  trend_following.py
utils/strategies/backtesting/: backtester.py
