[tool.poetry]
name = "trading-strategies"
version = "0.1.0"
description = "A project for implementing trend following and mean reversion trading strategies."
authors = ["Georgios Panagopoulos <georgios.panagopoulos1997@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_strategies"}]

[tool.poetry.dependencies]
python = "3.7.3"
yfinance = "^0.2.40"
pandas = "1.3.5"
urllib3 = "1.26.6"
matplotlib = "3.2"
plotly = "3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
